# FullForceAcademia

./: .claude.json  .env.example  .env.n8n  .env.n8n-cloud  .env.n8n.example  .env.railway.example  .gitignore  ATIVAÇÃO-N8N-URGENT.md  CHANGELOG.md  CLAUDE.md  CNAME  CONECTAR-WHATSAPP-MANUAL.md  DEPLOYMENT-COMPLETE-SUMMARY.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-INSTRUCTIONS.md  DEPLOYMENT-OPTIMIZED-REPORT.md  DEPLOYMENT-STATUS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_NUVEM_SIMPLES.md  DISRUPTIVE-WORKFLOW-SUMMARY.md  DOCKER_SETUP.md  Deploy-N8N-Workflow.ps1  Dockerfile  Dockerfile.railway  Dockerfile.waha  EXCEL_CAMPAIGN_AUTOMATION_README.md  EXPORT-WORKFLOWS-FFGYM.md  FFMATUPA-N8N-CLOUD-SUMMARY.md  FITNESS-ACADEMY-SETUP-GUIDE.md  GOOGLE-SHEETS-N8N-INTEGRATION.md  GUIA-ANALISE-REPOSITORIO.md  GUIA_CSV_MANUAL.md  GUIA_RAPIDO_CLIENTE.md  INICIAR_SISTEMA_PRODUCAO.bat  LIMPEZA_CONCLUIDA.md  N8N-AUTOMATION-COMPLETE-GUIDE.md  N8N-CLOUD-DEPLOYMENT-GUIDE.md  N8N-DEPLOYMENT-GUIDE.md  README-WORKFLOW.md  (+71 more)
.github/: copilot.md
agents/: init-all-agents.js
assets/: Alunos Ativos.xls  Alunos Totais.xls
backups/: workflow-academia-teste.json  workflow-sheets-whatsapp.json
claudedocs/: DOCKER_INFRASTRUCTURE_ANALYSIS.md  FULL_FORCE_ACADEMIA_CODE_REVIEW_REPORT.md  docker-cleanup-script.sh
compose/: docker-compose-whatsapp.yml
config/: agent-personality.js  error-handling-config.json  full-force-agent.js  google-service-account.json  google-sheets-n8n-config.json  memory-core-manager.js  playwright-automation.js  redis.conf  webhook-endpoints.json
docs/: CLAUDE.md  SETUP_GUIDE.md  production-roadmap.md
documentation/: DEEP_CLEAN_REPORT.md  N8N_VISUAL_AUTOMATION_COMPLETE.md  README-N8N-INTEGRATION.md  RELATORIO_AUDITORIA_COMPLETA_2025.md  SISTEMA_OTIMIZADO_FINAL.md
fullforce-site/: .gitignore  .npmrc  README.md  index.html  netlify.toml  package-lock.json  package.json  setup-github-deploy.sh  vite.config.js
mcp-playwright-automation/: pyproject.toml
mcp-playwright-automation/src/mcp_playwright_automation/: __init__.py  config.py  dashboard_automation.py  n8n_automation.py  server.py  sheets_automation.py  waha_automation.py
mcp-sequential-thinking/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-sequential-thinking/integration/: whatsapp_integration.py
mcp-sequential-thinking/scripts/: deploy.sh  healthcheck.py
mcp-sequential-thinking/src/mcp_sequential_thinking/: __init__.py  error_handling.py  monitoring.py  server.py  thinking.py  workflows.py
mcps/: init-all-mcps.js
n8n/: .env.example  GUIA_WORKFLOWS.md
n8n-workflows/: campaign-650-main-workflow.json  complete-workflow-config.json  fullforce-650-campaign-waha.json  google-sheets-inactive-users-reader.json  production-workflow-config.json  roi-tracking-dashboard.json  whatsapp-automation-webhook.json  whatsapp-waha-automation.json
processed-results/: RELATORIO_CAMPANHA_COMPLETA_2025-09-22_08-11-03.json  todos_alunos_analise_2025-09-22_08-04-24.json  todos_alunos_contatos_2025-09-22_08-04-24.json  todos_alunos_segmentacao_2025-09-22_08-04-24.json
reports/: health-check-1758591921358.json  initialization-1758591921359.json
scripts/: auto-token-retrieval.js  automated-token-retrieval.js  check-deployment-status.js  deep-clean-system.js  deploy-n8n-workflow.js  deploy-optimized-workflow.js  deploy-railway.sh  direct-deployment.js  docker-cleanup.js  google-sheets-n8n-integration.js  health-monitor.js  import-workflows.js  init-db.sql  install.bat  integrar-sheets-whatsapp.js  integration-test.js  interactive-deployment.js  n8n-alert-system.js  n8n-auto-activator.js  n8n-auto-deploy.js  n8n-browser-automation.js  n8n-dashboard-server.js  n8n-dashboard.html  n8n-fallback-system.js  n8n-setup-automation.js  n8n-workflow-monitor.js  one-click-deployment.js  performance-validator.js  setup-google-sheets-integration.js  setup-n8n-environment.js  start-n8n-automation.bat  start.bat  test-n8n-integration.js  test-n8n-system.bat  test-whatsapp-direct.js  test-whatsapp-message.js  testar-whatsapp.js  validate-config.js  verify-deployment-readiness.js  waha-campaign-650.js  (+1 more)
site/: ServiceCard.jsx  folder-structure.js  fullforce-complete-html.html  package-optimization.json  package.json  performance-optimization.js  responsive-fixes.html  seo-improvements.html  testing-setup.js  vite.config.js
src/: data-integration.js  (+11 more)
(+182 files in other folders)
